--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4",
-    "homepage": "https://reactrhp.github.io"
+    "homepage": "https://gabriele-tasca.github.io/reactRHP"
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
